Fixed project text alignment

--- a/styles.css
+++ b/styles.css
@@ -238,6 +238,7 @@ body
 {
     font-size: 65%;
     margin-bottom: 10%;
+    text-align: center;
 }
 
 .tnnfHeader
